--- a/gym-management-system-frontend/package.json
+++ b/gym-management-system-frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gym-management-system",
+  "name": "gym-management-system-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
