--- a/Gym-Management-System-Backend/test/fixtures/members.yml
+++ b/Gym-Management-System-Backend/test/fixtures/members.yml
@@ -3,13 +3,11 @@
 one:
   name: MyString
   email: MyString
-  belongs_to: 
-  belongs_to: 
-  belongs_to: 
+  membership: one
+  user: one
 
 two:
   name: MyString
   email: MyString
-  belongs_to: 
-  belongs_to: 
-  belongs_to: 
+  membership: two
+  user: two
